crates/varyk/tests/snapshots/examples__trip_main_rs.snap
---
source: crates/varyk/tests/examples.rs
expression: main
---
#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    ::varyk_std::run(async {
        ::varyk_std::start();
        let legs: Vec<::route::Leg> = ::std::vec![::route::leg("Home", "Mill", 800), ::route::leg("Mill", "Lake", 900)];
        let sum = ::units::length::add(&::route::total(&legs), &::units::length::Meters { value: 0 });
        ::std::println!("total {} meters", sum.value);
        let best = ::route::longest(&legs);
        ::std::println!("longest {} to {}, {} meters", best.from, best.to, best.length.value);
        for text in ::std::vec!["{\"name\": \"Lake\", \"minutes\": 12}".to_string(), "Lake at noon".to_string()] {
            match ::route::parse_stop(&text) {
                Ok(stop) => ::std::println!("stop {}, {} minutes", stop.name, stop.minutes),
                Err(_) => ::std::println!("no stop"),
            }
        }
        let minutes = ::route::walking_minutes(sum.value).await;
        ::std::println!("about {} minutes on foot", minutes);
    })
}
